--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
 	<div class="container">
 		<h3 class="text-center">
-			Welcome to the game
+			Welcome to the game <br><br>
 			<span class="label label-default">Rock</span>
 			<span class="label label-info">Paper</span>
 			<span class="label label-danger">Scissors</span>
+			<span class="label label-success">Lizard</span>
+			<span class="label label-warning">Spock</span>
 		</h3>
 	</div>
 	<div id="js-newGameElement" class="container">
@@ -43,6 +45,18 @@
 					<i class="fa fa-hand-scissors-o" aria-hidden="true"></i>
 				</span>
 				Scissors
+			</button>
+			<button id="js-playerPick_lizard"  class="btn">
+				<span class="badge">
+					<i class="fa fa-hand-lizard-o" aria-hidden="true"></i>
+				</span>
+				Lizard
+			</button>
+			<button id="js-playerPick_spock"  class="btn">
+				<span class="badge">
+					<i class="fa fa-hand-spock-o" aria-hidden="true"></i>
+				</span>
+				Spock
 			</button>
 		</div>
 	</div>
